2019-11-08  Jose E. Marchesi  <jemarch@gnu.org>

	* src/std.pk (catos): Stop at the first null character '\0'.
	* testsuite/poke.std/catos-3.pk: New test.

2019-11-08  Jose E. Marchesi  <jemarch@gnu.org>

	* bootstrap.conf (gnulib_modules): Import the module unlink from
	gnulib.
	* src/pk-editor.c (pk_cmd_editor): Open result file and extract
	the new line from it.
	Remove the temporary file.
	* doc/poke.texi (.editor): New chapter.

2019-11-07  Jose E. Marchesi  <jemarch@gnu.org>

	* bootstrap.conf (gnulib_modules): Import `system' gnulib module.
	* src/pk-editor.c: New file.
	* src/pk-cmd.c (editor_cmd): New extern.
	(cmds): Add editor_cmd.
	* src/Makefile.am (poke_SOURCES): Add pk_editor.c.

2019-11-08  Jose E. Marchesi  <jemarch@gnu.org>

	* pickles/bpf.pk (BPF_Insn_Opcode._print): Simply using the `in'
	operator.
	(bpf_class_is_alujmp): Likewise.
	* pickles/btf.pk (BTF_Type): Likewise.

2019-11-08  Michael Drüing <michael@drueing.de>

	* src/std.pk (atoi): New function.
	* testsuite/poke.std/atoi-1.pk: New test.
	* testsuite/poke.std/atoi-2.pk: Likewise.
	* testsuite/poke.std/atoi-3.pk: Likewise.
	* testsuite/poke.std/atoi-4.pk: Likewise.
	* testsuite/poke.std/atoi-5.pk: Likewise.
	* testsuite/poke.std/atoi-6.pk: Likewise.
	* testsuite/poke.std/atoi-7.pk: Likewise.
	* testsuite/poke.std/atoi-8.pk: Likewise.
	* testsuite/poke.std/atoi-9.pk: Likewise.
	* testsuite/poke.std/atoi-10.pk: Likewise.
	* testsuite/poke.std/atoi-11.pk: Likewise.
	* testsuite/poke.std/atoi-12.pk: Likewise.
	* testsuite/poke.std/atoi-13.pk: Likewise.

2019-11-08  Jose E. Marchesi  <jose.marchesi@oracle.com>

	* HACKING (Writing poke Tests): New section.

2019-11-08  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pkl-tab.y: Handle compound statements in the parser
	destructor.

2019-11-07  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pk-repl.h: New file.
	* src/pk-repl.c: Likewise.
	* src/Makefile.am (poke_SOURCES): Add pk-repl.c and pk-repl.h